--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-佩雯儿最美丽
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>title</title>
+</head>
+<body>
+<h1>爱佩雯</h1>
+<p>佩雯长得美，</p>
+<p>佩雯心善良。</p>
+<p>佩雯最美丽，</p>
+<p>我最爱佩雯。</p>
+</body>
+</html>
+    
