--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>爱佩雯</title>
 </head>
 <body>
 <h1>爱佩雯</h1>
